static/style/auth0-global.css
body {
  background-color: #f6f9fa;
  font-family: 'Roboto', sans-serif, Arial;
  font-size: 15px;
}

.wrapper {
  color: #485460;
}

input, button {
  font-size: 100%;
  color: #485460;
}

input::placeholder {
  color: #d2dae2;
}

a {
  text-decoration: none;
  color: #0fbcf9;
}

p {
  margin: 0;
}

.logo {
  text-align: center;
  margin-top: 40px;
}
@media only screen and (min-width: 600px) {
  .logo {
    margin-top: 120px;
  }
}
.logo-text {
  font-size: 300%;
  font-weight: 700;
  color: #0fbcf9;
}

#loading {
  position: fixed;
  z-index: 0;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  transition: all 0.4s;
  opacity: 1;
  width: 80px;
  margin: 0 auto;
}
#loading.hidden {
  opacity: 0;
  transform: translate(-50%, -50%) scale(0.95);
}
#loading img {
  width: 100%;
}

#form {
  position: relative;
  z-index: 1;
  width: 90%;
  max-width: 400px;
  margin: 20px auto 100px;
  transition: all 0.4s;
  opacity: 1;
}
@media only screen and (min-width: 600px) {
  #form {
    margin-top: 40px;
  }
}
#form.hidden {
  opacity: 0;
  transform: scale(0.95);
}
.form-header-title {
  text-align: center;
  color: #0fbcf9;
  font-weight: 500;
  font-size: 160%;
}
.form-input {
  width: 100%;
  padding: 14px 16px;
  box-sizing: border-box;
  margin: 8px 0;
  border: 1px solid #d2dae2;
  border-radius: 3px;
}
.form-input.half {
  width: 48%;
}

.form-button {
  position: relative;
  margin: 8px 0;
  padding: 14px 16px;
  width: 100%;
  box-sizing: border-box;
  border: none;
  border-radius: 3px;
  transition: transform 0.5s;
}
.form-button.colored {
  background-color: #0fbcf9;
  color: #fff;
}
.form-button.white {
  background-color: #fff;
  border: 1px solid #d2dae2;
}
.form-button:hover {
  cursor: pointer;
  transform: scale(1.02)
}
.form-button-icon {
  float: left;
  height: 16px;
  transform: scale(1.4);
}

.form-footer {
  margin-top: 30px;
  text-align: center;
}
.form-footer-button {
  color: #0fbcf9;
}
.form-footer-button:hover {
  cursor: pointer;
}

#message {
  opacity: 0;
  transition: all 0.3s;
  position: absolute;
  top: 20px;
  right: 50%;
  transform: translateX(50%) scale(0.9);
  width: 90%;
  max-width: 400px;
  border: 1px solid #0fbcf9;
  border-radius: 5px;
  background-color: #fff;
}
#message.error {
  color: #ff3f34;
  border: 1px solid #ff3f34;
}
#message.active {
  opacity: 1;
  transform: translateX(50%) scale(1);
}
@media only screen and (min-width: 1000px) {
  #message {
    right: 5%;
    transform: scale(0.9);
    top: 85px;
    max-width: 280px;
  }
  #message.active {
    transform: scale(1);
  }
}

.message-inner {
  position: relative;
}
.message-cross {
  position: absolute;
  left: -10px;
  top: -10px;
}
.message-cross-inner {
  display: none;
  position: relative;
  width: 20px;
  height: 20px;
  border-radius: 100%;
}
#message:not(.error) .message-cross-inner.message {
  display: block;
  background-color: #0fbcf9;
}
#message.error .message-cross-inner.error {
  display: block;
  background-color: #ff3f34;
}
.message-cross svg {
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  width: 8px;
  fill: #fff;
}
#message-close {
  position: absolute;
  right: 0px;
  top: 0px;
  padding: 5px 8px;
}
#message-close:hover {
  cursor: pointer;
}
#message-close svg {
  width: 10px;
  fill: #485460;
}
#message.error #message-close svg {
  fill: #ff3f34;
}
#message-text {
  padding: 30px 20px;
}

